--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@
 
 
 /* ====================== Variables ====================== */
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+:root {
+  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
+  color-scheme: light dark; /* con esto ya le estoy diciendo que si el fondo es negro le ponga font blanca */
   text-rendering: optimizeLegibility;
 
-  color-scheme: light dark;
-} */
+}
 
 
 /* ====================== Global Reset ====================== */
@@ -34,6 +34,12 @@
     display: none; 
 } */
 
+/* html {
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+  /* font-family: monospace; */
+  /* font-family: sans-serif; */
+/* } */ */
+
 /* ====================== Body ====================== */
 body {
   /* display: flex; */
@@ -52,7 +58,30 @@ body {
   text-align: center;
 } */
 
+/* ====================== Styles ====================== */
+/*! hacer que estos colores los puedan elegir las personas  */
+/* --color-blue-glow: #3F64E9;    
+--color-cyan-glow: #3FE9C4;      
+--color-purple-glow: #6A2FD8;  */
 
+.header-bg-elipse-1 {
+    background: rgba(63, 100, 233, .43);
+    filter: blur(150px);
+    width: 570px;
+    height: 180px;
+}
+.header-bg-elipse-2 {
+    background: rgba(63, 233, 196, .43);
+    filter: blur(130px);
+    width: 570px;
+    height: 264px;
+}
+.header-bg-elipse-3 {
+    background: rgba(106, 47, 216, .43);
+    filter: blur(130px);
+    width: 570px;
+    height: 140px;
+}
 /* ====================== Links ====================== */
 /* a {
   font-weight: 500;
@@ -62,3 +91,4 @@ body {
 a:hover {
   color: #535bf2;
 } */
+
