--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
   /* color: rgba(255, 255, 255, 0.87); */
   /* background-color: #242424; */
-  color-scheme: light dark; /* con esto ya le estoy diciendo que si el fondo es negro le ponga font blanca */
+  color-scheme: light dark; /*con esto ya le estoy diciendo que si el fondo es negro le ponga font blanca */
   text-rendering: optimizeLegibility;
 
 }
@@ -34,18 +34,22 @@
     display: none; 
 } */
 
-/* html {
+html {
   /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   /* font-family: monospace; */
   /* font-family: sans-serif; */
-/* } */ */
+  background-color: #000000;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  overflow-x: hidden; /* esto saca el scroll lateral que me da la linea */
+}
 
 /* ====================== Body ====================== */
 body {
   /* display: flex; */
   /* justify-content: center; */
   /* align-items: center; */
-  background: #000;
   /* max-width: 90%; */
 }
 
