--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,9 @@ html {
   display: flex;
   justify-content: center;
   overflow-x: hidden; /* esto saca el scroll lateral que me da la linea */
+  /* scrollbar-width: thin; */
+  scrollbar-width: none;
+  /* scrollbar-color: red black; */
 }
 
 /* ====================== Body ====================== */
@@ -119,6 +122,12 @@ body {
     width: 570px;
     height: 140px;
 }
+
+/* ====================== Scrollbar ====================== */
+
+
+
+
 /* ====================== Links ====================== */
 /* a {
   font-weight: 500;
