--- a/src/index.css
+++ b/src/index.css
@@ -80,15 +80,30 @@ html {
   /* scrollbar-width: thin; */
   scrollbar-width: none;
   /* scrollbar-color: red black; */
+  /* position: relative; */
+  /* overflow-x: hidden !important; */
 }
 
-/* ====================== Body ====================== */
+/*! ====================== IMPORTANT ====================== */
+/* esto es lo que hace que no se desborde  */
+html, body {
+  overflow-x: hidden !important;
+  /* max-width: 100vw !important; */
+  /* position: relative; */
+}
+
 body {
+  width: 100%;
+}
+
+
+/* ====================== Body ====================== */
+/* body { */
   /* display: flex; */
   /* justify-content: center; */
   /* align-items: center; */
   /* max-width: 90%; */
-}
+/* } */
 
 /* ====================== Root ====================== */
 /* #root {
