--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,11 @@ body {
 /* ====================== Scrollbar ====================== */
 
 
+/* ====================== Custom Components ====================== */
+.glass-effect {
+    @apply bg-[#1e1e2e]/5 backdrop-blur-md;
+  }
+
 
 
 /* ====================== Links ====================== */
