--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* ====================== Tailwind ====================== */
 
-@plugin "tailwindcss-animate";
-@import "tailwindcss";
+@plugin 'tailwindcss-animate';
+@import 'tailwindcss';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -18,7 +18,11 @@
 /* ====================== Global Reset ====================== */
 /* Tailwind ya resetea MUCHAS cosas con Preflight  por eso no le hago reset yo*/
 
-*, *::before, *::after, html, body {
+*,
+*::before,
+*::after,
+html,
+body {
   scrollbar-gutter: auto;
 }
 
@@ -33,7 +37,8 @@ html {
 
 /*! ====================== IMPORTANT ====================== */
 /* esto es lo que hace que no se desborde mas las configs de el layout hacen que no se desborde */
-html, body {
+html,
+body {
   overflow-x: hidden !important;
 }
 
@@ -44,22 +49,44 @@ body {
 /* ====================== Custom Classes ====================== */
 /** se que no se hace esto con tailwind pero asi se puede tener un poco mas general algunas cosas */
 
+/* 
+esta es la config general de estilo
+rounded-2x1
+bg-[#1e1e2e]/5 backdrop-blur-md
+border-white/10
+hover:border-white/40
+hover:bg-white/10
+
+*/
+
 .glass-effect {
   @apply bg-[#1e1e2e]/5 backdrop-blur-md;
 }
-/* bg-[#1e1e2e]/5 */
 
 .rounded-app {
-  @apply rounded-2xl
+  @apply rounded-2xl;
+}
+
+.border-app-t {
+  @apply border-t border-white/10;
+}
+.border-app-l {
+  @apply border-l border-white/10;
 }
 
 .border-app {
-  @apply border border-white/10
+  @apply border border-white/10;
 }
 
 .border-hover-app {
-  @apply border border-white/10
-} 
+  @apply border border-white/40;
+}
+
+.bg-selected-btn {
+  @apply bg-white/10;
+}
+
+/* poner tamaños de fonts y colores */
 
 /* ====================== Styles ====================== */
 /*! hacer que estos colores los puedan elegir las personas  */
@@ -68,19 +95,19 @@ body {
 --color-purple-glow: #6A2FD8;  */
 
 .header-bg-elipse-1 {
-  background: rgba(63, 100, 233, .43);
+  background: rgba(63, 100, 233, 0.43);
   filter: blur(150px);
   width: 570px;
   height: 180px;
 }
 .header-bg-elipse-2 {
-  background: rgba(63, 233, 196, .43);
+  background: rgba(63, 233, 196, 0.43);
   filter: blur(130px);
   width: 570px;
   height: 264px;
 }
 .header-bg-elipse-3 {
-  background: rgba(106, 47, 216, .43);
+  background: rgba(106, 47, 216, 0.43);
   filter: blur(130px);
   width: 570px;
   height: 140px;
