--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,8 @@ body {
   width: 100%;
 }
 
-/* ====================== Custom Classes ====================== */
+/* ====================== Custom Classes and Theme Variables====================== */
 /** se que no se hace esto con tailwind pero asi se puede tener un poco mas general algunas cosas */
-
 /* 
 esta es la config general de estilo
 rounded-2x1
@@ -56,19 +55,19 @@ bg-[#1e1e2e]/5 backdrop-blur-md
 border-white/10
 hover:border-white/40
 hover:bg-white/10
-/* ====================== Theme Variables ====================== */
+*/
+
 @theme {
   /* Borders */
-  --color-border-app: white/10;
-  --color-border-app-hover: white/40;
+  --color-border-app: white;
 
   /* Backgrounds */
-  --color-bg-glass: #1e1e2e/5;
-  --color-bg-selected: white/10;
+  --color-bg-glass: #1e1e2e;
+  --color-bg-selected: white;
 }
 
 .glass-effect {
-  @apply bg-[#1e1e2e]/5 backdrop-blur-md;
+  @apply bg-bg-glass/5 backdrop-blur-md;
 }
 
 .rounded-app {
@@ -76,22 +75,25 @@ hover:bg-white/10
 }
 
 .border-app-t {
-  @apply border-t border-white/10;
+  @apply border-border-app/10 border-t;
 }
 .border-app-l {
-  @apply border-l border-white/10;
+  @apply border-border-app/10 border-l;
 }
 
 .border-app {
-  @apply border border-white/10;
+  @apply border-border-app/10 border;
 }
 
 .border-hover-app {
-  @apply border hover:border-white/40;
+  @apply hover:border-border-app/40 border;
+}
+.border-selected-app {
+  @apply border-border-app border;
 }
 
 .bg-selected-btn {
-  @apply bg-white/10;
+  @apply bg-bg-selected/10;
 }
 
 /* poner tamaños de fonts y colores */
@@ -104,19 +106,19 @@ hover:bg-white/10
 
 .header-bg-elipse-1 {
   background: rgba(63, 100, 233, 0.43);
-  filter: blur(150px);
+  /* filter: blur(150px); */
   width: 570px;
   height: 180px;
 }
 .header-bg-elipse-2 {
   background: rgba(63, 233, 196, 0.43);
-  filter: blur(130px);
+  /* filter: blur(130px); */
   width: 570px;
   height: 264px;
 }
 .header-bg-elipse-3 {
   background: rgba(106, 47, 216, 0.43);
-  filter: blur(130px);
+  /* filter: blur(130px); */
   width: 570px;
   height: 140px;
 }
