--- a/src/index.css
+++ b/src/index.css
@@ -106,19 +106,19 @@ hover:bg-white/10
 
 .header-bg-elipse-1 {
   background: rgba(63, 100, 233, 0.43);
-  /* filter: blur(150px); */
+  filter: blur(150px);
   width: 570px;
   height: 180px;
 }
 .header-bg-elipse-2 {
   background: rgba(63, 233, 196, 0.43);
-  /* filter: blur(130px); */
+  filter: blur(130px);
   width: 570px;
   height: 264px;
 }
 .header-bg-elipse-3 {
   background: rgba(106, 47, 216, 0.43);
-  /* filter: blur(130px); */
+  filter: blur(130px);
   width: 570px;
   height: 140px;
 }
