--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,13 @@ hover:bg-white/10
   @apply bg-bg-selected/10;
 }
 
+.bg-techitem-hover {
+  @apply hover:bg-bg-selected/10;
+}
+.bg-techitem {
+  @apply bg-bg-selected/5;
+}
+
 /* ================================ Texto para poder tener modo claro y oscuro (sin terminar)  ================================ */
 /* hay que hacer que las clases sean mas reutilizables, es una mierda*/
 .app-text-color {
@@ -154,4 +161,71 @@ hover:bg-white/10
   filter: blur(130px);
   width: 570px;
   height: 140px;
+}
+
+/* ===== Volume Slider Minimal ===== */
+
+.volume-slider {
+  -webkit-appearance: none;
+  /* width: 100%; */
+  /* height: 6px; */
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 9999px;
+  outline: none;
+  cursor: pointer;
+  /* transition: background 0.3s ease; */
+}
+
+/* Hover background */
+.volume-slider:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+/* Track (Chrome) */
+.volume-slider::-webkit-slider-runnable-track {
+  height: 6px;
+  background: transparent;
+}
+
+/* Thumb (Chrome) */
+.volume-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 14px;
+  width: 14px;
+  background: white;
+  border-radius: 9999px;
+  /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.6); */
+  transition:
+    transform 0.15s ease,
+    box-shadow 0.3s ease;
+  margin-top: -4px;
+}
+
+/* Thumb hover */
+.volume-slider::-webkit-slider-thumb:hover {
+  transform: scale(1.2);
+  /* box-shadow: 0 0 12px rgba(255, 255, 255, 0.9); */
+}
+
+/* Firefox track */
+.volume-slider::-moz-range-track {
+  background: transparent;
+  height: 6px;
+}
+
+/* Firefox thumb */
+.volume-slider::-moz-range-thumb {
+  height: 14px;
+  width: 14px;
+  background: white;
+  border-radius: 9999px;
+  border: none;
+  /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.6); */
+  transition:
+    transform 0.15s ease,
+    box-shadow 0.3s ease;
+}
+
+.volume-slider::-moz-range-thumb:hover {
+  transform: scale(1.2);
 }
